kube/dashboard/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashy
        image: lissy93/dashy
        ports:
        - containerPort: 8080
          name: webui
        volumeMounts:
        - mountPath: "/app/user-data"
          readOnly: false
          name: nfs
          subPath: "dashy"
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: dashboard
