kube/dashboard/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: dashboard
spec:
  ports:
  - name: webui
    port: 8080
    targetPort: 8080
  selector:
    app: dashboard
